tests/parser/fail/v29_fail_embed_dynamic.ep
# COMPILE_FAIL: Expected STRING
fun main(): void {
    let path = "file.ep"
    let text = embed path
}
